# baldes

./: .gitignore  AGENTS.md  AMD_8h.html  AMD_8h.js  AMD_8h__dep__incl.map  AMD_8h__dep__incl.md5  AMD_8h__incl.map  AMD_8h__incl.md5  AMD_8h_a1f3726a82e8c876e16d95eaf6c0c3b32_cgraph.map  AMD_8h_a1f3726a82e8c876e16d95eaf6c0c3b32_cgraph.md5  AMD_8h_source.html  Activities_8h.html  Activities_8h.js  Activities_8h__dep__incl.map  Activities_8h__dep__incl.md5  Activities_8h__incl.map  Activities_8h__incl.md5  Activities_8h_source.html  Allocator_8h.html  Allocator_8h.js  Allocator_8h__dep__incl.map  Allocator_8h__dep__incl.md5  Allocator_8h__incl.map  Allocator_8h__incl.md5  Allocator_8h_source.html  Arc_8h.html  Arc_8h.js  Arc_8h__dep__incl.map  Arc_8h__dep__incl.md5  Arc_8h__incl.map  Arc_8h__incl.md5  Arc_8h_source.html  BCP_8cpp.html  BCP_8cpp__incl.map  BCP_8cpp__incl.md5  BCP_8cpp_source.html  BCP_8h.html  BCP_8h.js  BCP_8h__dep__incl.map  BCP_8h__dep__incl.md5  (+3012 more)
.github/workflows/: cmake-single-platform.yml  docs.yaml
baldes-53428c7b8e64f1b78f019dcdd84cc9eab0b4c6cb/: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  column_elimination.py  configurer.sh  highs.patch  muSPP  mussp
baldes-53428c7b8e64f1b78f019dcdd84cc9eab0b4c6cb/.github/workflows/: docs.yaml
baldes-53428c7b8e64f1b78f019dcdd84cc9eab0b4c6cb/ce/: DecisionDiagram.py  LagSolver.py  auxiliar.py  main.py  reader.py
baldes-53428c7b8e64f1b78f019dcdd84cc9eab0b4c6cb/examples/python/: random_instance.py
baldes-53428c7b8e64f1b78f019dcdd84cc9eab0b4c6cb/include/: Arc.h  Bitset.h  Bucket.h  Common.h  CostFunction.h  Definitions.h  Dual.h  HGS.h  Label.h  Logger.h  POPMUSIC.h  Pools.h  RIH.h  RNG.h  SCCFinder.h  TR.h  TaskQueue.h  VRPNode.h
baldes-53428c7b8e64f1b78f019dcdd84cc9eab0b4c6cb/include/algebra/: EvaluatorGPU.h  LDLTCuda.h  SparseMatrix.h  Supernodal.h
baldes-53428c7b8e64f1b78f019dcdd84cc9eab0b4c6cb/include/bnb/: BCP.h  Node.h
baldes-53428c7b8e64f1b78f019dcdd84cc9eab0b4c6cb/src/: Baldes.cpp  BucketBindings.cpp  HGS.cpp  HighOrderSRC.cpp  IPSolver.cpp  Original.cpp  RCC.cpp  RLBindings.cpp  SRC.cpp
bucket/: BucketAVX.h  BucketGraph.h  BucketJump.h  BucketSolve.h  BucketUtils.h
ce/: Aux.py  auxiliar.py  main.py  main2.py  novo.py  reader.py  testing.py
cuts/: RCC.h  SRC.h
cvrpsep/: capsep.h
docs/: bucket-graph-review-plan.md
evrp/: output.txt  readme.txt
examples/: Baldes.cpp  VRPTW.cpp  VRPTW.h  pstep.py
examples/algebra/: CMakeLists.txt  main.cpp
examples/python/: pstep.py  random.py  random_instance.py
extra/: Heuristic.cpp  Heuristic.h  Stabilization.h
include/: Allocator.h  Arc.h  Bitset.h  Bucket.h  BucketAVX.h  BucketGraph.h  BucketJump.h  BucketSolve.h  BucketUtils.h  Common.h  ConcurrentMap.h  CostFunction.h  Cut.h  DataClass.h  DataClasses.h  Definitions.h  Dual.h  HGS.h  Hashes.h  Knapsack.h  Label.h  PDHG.h  POPMUSIC.h  PSTEP.h  Path.h  Pools.h  RIH.h  RNG.h  Reader.h  RouteCache.h  SCCFinder.h  Serializer.h  Simplex.h  SmartHGS.h  SparseMatrix.h  State.h  Stats.h  TR.h  TSP.h  TaskQueue.h  (+9 more)
include/MIPHandler/: Constraint.h  LinExp.h  MIPHandler.h  Variable.h
include/algebra/: CMakeLists.txt  Evaluator.h  EvaluatorGPU.cu  EvaluatorGPU.h  LDLT.cu  LDLTCuda.h  SparseMatrix.h  Supernodal.h  main.cpp
include/bnb/: BCP.h  BNB.h  Branching.h  Node.h  Problem.h
include/bucket/: BucketAVX.h  BucketConcat.h  BucketGraph.h  BucketJump.h  BucketPricing.h  BucketPricingPass.h  BucketRes.h  BucketSolve.h  BucketTopology.h  BucketUtils.h
include/core/: Definitions.h  HGS.h  Logger.h  Pools.h  State.h  Stats.h  TaskQueue.h
include/cuts/: Cut.h  CutHelper.h  CutIntelligence.h  ExactRCC.h  HeuristicHighOrder.h  HighHelper.h  HighOrderSRC.h  Permutations.h  RCC.h  SRC.h  SRCHelper.h  Stealing.h
include/data/: Arc.h  Bucket.h  Path.h  Trees.h  VRPNode.h
include/extra/: Heuristic.h  MultiPointMgr.h  Stabilization.h
include/graph/: SCCFinder.h
include/ipm/: AMD.h  CMakeLists.txt  CuSolver.h  IPSolver.h  LDLT.h  LDLTSimp.h  MaxVolume.h  Solver.h  Supernodal.h
include/math/: Bitset.h  Common.h  RNG.h
include/mip/: Constraint.h  LinExp.h  MIPHandler.h  MIPHelper.h  Variable.h
include/miphandler/: Constraint.h  LinExp.h  MIPHandler.h  MIPHelper.h  Variable.h
include/model/: Bucket.h  Label.h  Path.h  VRPNode.h
include/presolve/: Activities.h  Clique.h
include/pricing/: BucketConcat.h  BucketGraph.h  BucketJump.h  BucketPricing.h  BucketPricingPass.h  BucketRes.h  BucketSolve.h  BucketTopology.h  BucketUtils.h
include/routing/: RouteCache.h  Serializer.h  TSP.h  VRPCandidate.h
include/search/: Dual.h  HGS.h  Knapsack.h  POPMUSIC.h  PSTEP.h  RIH.h  TR.h
include/simplex/: CMakeLists.txt  ModernSimplex  main.cpp
include/solvers/: Gurobi.h  HighsSolver.h  IPM.h  SolverInterface.h
include/stabilization/: Stabilization.h
include/utils/: Hashes.h  MST.h  NumericUtils.h  Reader.h  UnionFind.h
ipm/: IPSolver.cpp  IPSolver.h
mtw/: instance.txt
papers/: BucketGraph.md  yang.md
presolve/: Activities.h  Clique.h
python/: BucketBindings.cpp  runner.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  (+147 more)
src/: BCP.cpp  Baldes.cpp  Branching.cpp  BucketBindings.cpp  BucketGraph.cpp  BucketJump.cpp  BucketPSTEP.cpp  HGS.cpp  Heuristic.cpp  HighOrderSRC.cpp  IPSolver.cpp  MIPHandler.cpp  Original.cpp  RCC.cpp  RIH.cpp  RLBindings.cpp  SRC.cpp  SRCHelper.cpp  TSP.cpp  TupleSeparator.cpp  mps_lp.cpp
src/algebra/: LDLT.cu
src/apps/: Baldes.cpp  Original.cpp
src/bnb/: BCP.cpp  Branching.cpp
src/mip/: MIPHandler.cpp
src/pricing/: BucketGraph.cpp  BucketPSTEP.cpp
src/python/: BucketBindings.cpp
(+21 files in other folders)
